# hackernewspipeline

./: .gitattributes  .gitignore  CLAUDE.md  README.md  last_pipeline_run.txt  progress.md  project_plans.md  pyproject.toml  requirements.txt  run_pipeline.py  startup.sh
.github/workflows/: daily_pipeline.yml
.streamlit/: config.toml
src/dashboard/: app.py
src/ingestion/: backfill.py  client.py  incremental.py
src/pipeline/: flow.py
src/storage/: db.py
src/tests/: conftest.py  test_aggregation.py  test_anomaly.py  test_client.py  test_dashboard.py  test_detector.py  test_storage.py
src/transforms/: detector.py  hype_score.py  keyword_pipeline.py  taxonomy.py  tfidf_discovery.py  velocity.py  weekly_agg.py
