[project]
name = "e2e-data-pipeline"
version = "0.1.0"
description = "TechPulse — HN Tech Trend Radar"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pandas>=2.0",
    "prefect>=3.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "streamlit>=1.35",
]


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
